<resources>
    <string name="pull_to_refresh_pull_label" translatable="false">向下拉动可以刷新</string>
    <string name="pull_to_refresh_release_label" translatable="false">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label" translatable="false">加载中&#8230;</string>
    <string name="pull_to_refresh_tap_label" translatable="false">点击刷新</string>
    <string name="first_tab">tab_home</string>
    <string name="second_tab">tab_search</string>
    <string name="third_tab">tab_search_hotel</string>
    <string name="forth_tab">tab_scenic</string>
    <string name="fifth_tab">tab_me</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="simple_chinese">简体中文</string>
    <string name="english">English</string>
    <string name="russian">Pусский</string>
    <string name="desc"></string>
    <string name="website">www.wqdsoft.com</string>
    <string name="more_pic">●●●</string>
    <string name="nickname">昵称</string>
    <string name="please_input_phone_number">请输入手机号码</string>
    <string name="check_phone_number_hint">手机号格式不正确,请输入正确的手机号</string>
    <string name="please_input_pwd">请设置密码</string>
    <string name="please_input_request_reason_hint">请输入请求内容</string>
    <string name="please_input_confim_pwd">请确认密码</string>
    <string name="check_pwd_hint">前后密码不一致,请重新输入</string>
    <string name="starting">启动服务.</string>
    <string name="get_valid_code">获取验证码</string>
    <string name="please_input_old_new_confirm">请输入旧密码、新密码、确认密码</string>
    <string name="new_old_pwd_not_equalse">新密码和旧密码一样,请重新设置</string>
    <string name="nickname_length_hint">昵称长度为2~8个字</string>
    <string name="group_name_length_hint">名字限制2-8个字</string>
    <string name="group_nickname_length_hint">我的群昵称为2~8个字</string>
    <string name="remark_length_hint">备注名为2~8个字</string>
    <string name="sign_length_hint">个性签名长度在30个字以内</string>
    <string name="please_input_valid_hint">请输入验证码</string>
    <string name="check_protrol_hint">请阅读并同意注册协议</string>
    <string name="register_faile">注册失败,请稍后再试...</string>
    <string name="commit_data_error">提交数据失败!</string>
    <string name="set_top_item">置顶聊天</string>
    <string name="cancle_top_item">取消置顶</string>
    <string name="del_chat">删除聊天</string>
    <string name="del">删除</string>
    <string name="has_new_notification">有新通告</string>
    <string name="exception_out_of_memory">图片太大，处理失败！</string>
    <string name="zhang">张</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="send_moving_error">分享失败</string>
    <string name="send_moving_success">分享成功</string>
    <string name="confirm_send">确定发送</string>
    <string name="from_card_to_chat">名片到当前聊天?</string>
    <string name="tui_user">推荐人员</string>
    <string name="my_focus">我的关注者</string>
    <string name="fen_list">粉丝列表</string>
    <string name="focus_list">关注列表</string>
    <string name="please_input_group_nickname">请填写群昵称在提交</string>
    <string name="please_modify_content">请修改内容后在提交!</string>
    <string name="please_input_your_group_nickname">请填写你的群组昵称在提交!</string>
    <string name="please_input_comment_contnet">请输入你要评论的内容</string>
    <string name="are_you_change_bg">你确定要更换背景吗？</string>
    <string name="please_select_map">请选择地图在发送</string>
    <string name="group_list">群组列表</string>
    <string-array name="delivery_way_array">
        <item>Not Limited</item>
        <item>Regular Post Service</item>
        <item>DHL</item>
        <item>EMS</item>
        <item>UPS</item>
        <item>Regular Post Service(Tracking)</item>
        <item>Freight Forwarding</item>
        <item>Fedex</item>
        <item>Singapore--EMS</item>
        <item>HKEMS</item>
        <item>Sinotrans - DHL</item>
        <item>CN-UPS</item>
        <item>Yanwen EMS</item>
        <item>DHL-A</item>
        <item>USA Express</item>
        <item>Aramex Express</item>
        <item>HK Airmail Parcel big Post</item>
        <item>DHL-B</item>
        <item>DHL-C</item>
        <item>DHL-E</item>
        <item>DHL-AA</item>
        <item>DHL-BB</item>
        <item>DHL-CC</item>
        <item>Aramex</item>
        <item>China Registered Mail</item>
        <item>Singapore Registered Mail</item>
        <item>China Postal Package</item>
        <item>Dino-Russia Line Express</item>
        <item>Dino-Russian mail-order Treasure</item>
        <item>Russia Express</item>
        <item>Air Transportation</item>
        <item>Land Transportation</item>
        <item>Sea Transportation</item>
        <item>Fedex-IP</item>
        <item>Fedex—21KG+</item>
        <item>Fedex-IP-21KG+</item>
        <item>Citylink-Common</item>
        <item>Sweden Registered Mail(Tracking)</item>
        <item>City-Link-Heavy</item>
        <item>City-Link-Quality Goods</item>
        <item>City-Link-Quality Goods-Heavy</item>
        <item>Swiss Post</item>
        <item>DHL for Replica</item>
        <item>DHL for Replica 21KG+</item>
        <item>bulk production Railway Express</item>
        <item>China Postal Transportation registration</item>
        <item>China-SF</item>
    </string-array>
    <string-array name="delivery_way_num_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>18</item>
        <item>19</item>
        <item>24</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
    </string-array>
    <string-array name="ch_function_array">
        <item>ch_function_1</item>
        <item>ch_function_2</item>
        <item>ch_function_3</item>
        <item>ch_function_4</item>
        <item>ch_function_5</item>
        <item>ch_function_6</item>
        <item>ch_function_7</item>
    </string-array>
    <string-array name="en_function_array">
        <item>en_function_1</item>
        <item>en_function_2</item>
        <item>en_function_3</item>
        <item>en_function_4</item>
        <item>en_function_5</item>
        <item>en_function_6</item>
        <item>en_function_7</item>
    </string-array>
    <string-array name="ru_function_array">
        <item>ru_function_1</item>
        <item>ru_function_2</item>
        <item>ru_function_3</item>
        <item>ru_function_4</item>
        <item>ru_function_5</item>
        <item>ru_function_6</item>
        <item>ru_function_7</item>
    </string-array>
    <string-array name="type_array">
        <item>名字</item>
        <item>地区</item>
        <item>频率</item>
        <item>添加时间</item>
        <item>课程</item>
        <item>行业</item>
    </string-array>
    <string name="ochat_app_name">车友会</string>
    <string name="user_login">用户登录</string>
    <string name="user_not_exits">用户不存在!</string>
    <string name="please_select_system_to_sign_in">请选择登陆系统</string>
    <string name="visit_website">访问官网:</string>
    <string name="chat">消息</string>
    <string name="contacts">通讯录</string>
    <string name="find_tab">发现</string>
    <string name="profile_tab">我</string>
    <string name="ss">未完结订单</string>
    <string name="finished">已完结订单</string>
    <string name="ss_status">未完结</string>
    <string name="finished_status">已完结</string>
    <string name="amount">总金额</string>
    <string name="order_status">订单状态</string>
    <string name="shipped_out">已出货</string>
    <string name="system">系统</string>
    <string name="order_time">下单时间</string>
    <string name="order_tracking">订单跟踪</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="confirm_exit">是否退出思八达？</string>
    <string name="watch_tou_piao">投票成功!</string>
    <string name="watch_pic">查看图片</string>
    <string name="exit">退出</string>
    <string name="cancel">取消</string>
    <string name="profile_infor">个人资料</string>
    <string name="profile_detail">详细资料</string>
    <string name="notification">通知</string>
    <string name="scan_qr_code">扫一扫</string>
    <string name="blocked_list">黑名单</string>
    <string name="feedback">意见反馈</string>
    <string name="set_feedback">反馈意见</string>
    <string name="help">帮助中心</string>
    <string name="check_for_updates">检测新版本</string>
    <string name="about_us">关于小圈子</string>
    <string name="saoyisao">扫一扫</string>
    <string name="my_location_prompt">我的位置</string>
    <string name="setting">设置</string>
    <string name="new_chat">新会话</string>
    <string name="edit">编辑</string>
    <string name="just_now">刚刚</string>
    <string name="hour">小时</string>
    <string name="minutes">分</string>
    <string name="minutes_time">分钟</string>
    <string name="second">秒</string>
    <string name="before">前</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="input_orderno_orderstatus">输入订单号</string>
    <string name="remember_pwd">记住密码</string>
    <string name="continuetorefresh">下拉可以刷新</string>
    <string name="starttorefresh">松开可以刷新</string>
    <string name="refreshloading">加载中...</string>
    <string name="updatetime">更新于:</string>
    <string name="loading_system">加载系统...</string>
    <string name="network_error">Network Error</string>
    <string name="unknown_addr">Unknown Address</string>
    <string name="error_host">Unknown Host</string>
    <string name="timeout">网络访问超时</string>
    <string name="load_error">数据加载出错</string>
    <string name="loading_login">登录中...</string>
    <string name="login_error">登录失败</string>
    <string name="please_input_username">请输入用户名</string>
    <string name="please_input_password">请输入密码</string>
    <string name="add_more">加载更多</string>
    <string name="no_more_data">没有更多信息</string>
    <string name="add_more_loading">加载中...</string>
    <string name="profile">详细信息</string>
    <string name="fullname">姓名</string>
    <string name="region">国籍</string>
    <string name="what_up">个性签名</string>
    <string name="send_message">发送消息</string>
    <string name="alias">备注名</string>
    <string name="alias_info">备注信息</string>
    <string name="reported">举报</string>
    <string name="add_block">加入黑名单</string>
    <string name="delete_friend">删除</string>
    <string name="back">返回</string>
    <string name="toast_sdcard_mounted">SD卡拔出，不能使用某些功能!</string>
    <string name="toast_sdcard_available">SD卡存储空间不足!</string>
    <string name="ok">确定</string>
    <string name="screenshot">截图</string>
    <string name="copy_order_no">复制订单号</string>
    <string name="order_detail">订单详细</string>
    <string name="commodity_total_money">商品总额</string>
    <string name="devliery_fee">运费</string>
    <string name="commodity_list">商品列表</string>
    <string name="search">搜索</string>
    <string name="search_weibo">搜索微博</string>
    <string name="search_user">找人</string>
    <string name="comment">评论</string>
    <string name="for_me">提到我的</string>
    <string name="zan_for_me">赞</string>
    <string name="select_item_group">选择一个群</string>
    <string name="main_page_count">主页访问</string>
    <string name="froward_comment_count">转发评论数</string>
    <string name="hu_coung">常与我互动</string>
    <string name="neary_data_title">近30天数据分析</string>
</resources>