<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/title_layout"
        layout="@layout/title_layout" />

    <RelativeLayout
        android:id="@+id/searchlayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#f0e4ab"
        android:padding="10dp" >

        <EditText
            android:id="@+id/search_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/seach_edit_bg"
            android:gravity="center_vertical"
            android:hint="@string/search"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="@color/text_color"
            android:textColorHint="@color/text_color"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/search_btn"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/desc"
            android:src="@drawable/order_search_icon" />
    </RelativeLayout>

    <RadioGroup
        android:id="@+id/search_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-5dip"
        android:paddingBottom="5dip"
        android:paddingLeft="20dip"
        android:background="#f0e4ab"
        android:orientation="horizontal" 
        android:visibility="gone">

        <RadioButton
            android:id="@+id/search_weibo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="60dip"
            android:button="@drawable/radiobutton_boy_selector"
            android:checked="true"
            android:text="@string/search_weibo"
            android:textColor="#808080"
            android:textSize="16dip" >
        </RadioButton>

        <RadioButton
            android:id="@+id/search_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/radiobutton_girl_selector"
            android:text="@string/search_user"
            android:textColor="#808080"
            android:textSize="16dip" >
        </RadioButton>
    </RadioGroup>

    <ListView
        android:id="@+id/weibo_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/backgroud_color"
        android:cacheColorHint="@null"
        android:fadingEdge="none"
        android:fastScrollEnabled="true"
        android:focusable="true"
        android:listSelector="@drawable/transparent_selector"
        android:scrollbars="none" />

</LinearLayout>