<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/searchlayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/application_search_title_bg_color"
        android:padding="10dp" >

        <EditText
            android:id="@+id/searchcontent"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_centerVertical="true"
            android:background="@drawable/yuan_edit_bg"
            android:gravity="center_vertical"
            android:hint="@string/search"
            android:paddingLeft="35dp"
            android:singleLine="true"
            android:textColor="@color/application_black"
            android:textColorHint="@color/application_deep_gray_black"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/desc"
            android:src="@drawable/order_search_icon" />
    </RelativeLayout>
    <RelativeLayout 
        android:id="@+id/select_group_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:visibility="visible"
        android:padding="10dip">
        <TextView 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/editor_hint_color"
			android:text="@string/select_item_group"
			android:textSize="16sp"
			android:layout_alignParentLeft="true" />
        <ImageView 
            android:id="@+id/arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/desc"
            android:layout_centerVertical="true"
            android:background="@drawable/deep_gray_arrow"/>
    </RelativeLayout>

</LinearLayout>