<?xml version="1.0" encoding="utf-8"?>
<!--   -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/category_linear"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/menu_layout"
        android:layout_marginTop="@dimen/refresh_listview_margin_top"
        android:orientation="vertical" >

        <include layout="@layout/pull_to_refresh_view" />
    </LinearLayout>

    <include
        android:id="@+id/title_layout"
        layout="@layout/title_layout" />

    <LinearLayout
        android:id="@+id/menu_layout"
        android:layout_width="fill_parent"
        android:layout_height="45dip"
        android:layout_below="@+id/title_layout"
        android:background="@drawable/top_menu"
        android:orientation="horizontal" 
        android:layout_marginBottom="5dip">

        <Button
            android:id="@+id/for_me_btn"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@null"
            android:textColor="@color/top_menu_checked_color"
            android:textSize="16sp"
            android:text="@string/for_me" />

        <View
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:background="@drawable/top_menu_splite" />

        <Button
            android:id="@+id/comment_btn"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@null"
            android:textColor="@color/top_menu_checked_color"
            android:textSize="16sp"
            android:text="@string/comment" />

        <View
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:background="@drawable/top_menu_splite" />

        <Button
            android:id="@+id/zan_btn"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@null"
            android:textColor="@color/top_menu_checked_color"
            android:textSize="16sp"
            android:text="@string/zan_for_me" />
    </LinearLayout>

</RelativeLayout>