<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <include 
        layout="@layout/title_layout"
        android:id="@+id/title_layout"/>
    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none">
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sixteen"
                android:background="@drawable/chat_time_bg"
                android:textColor="#EDEDED"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dip"
                android:text="@string/neary_data_title"/>
            <LinearLayout 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="10dip"
                android:background="@drawable/double_splite">
                <LinearLayout 
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="15dip"
                    android:background="@drawable/single_splite">
                    <TextView 
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_page_count"
                        android:textColor="@color/font_color"
                        android:textSize="@dimen/eight"/>
                    <TextView 
                        android:id="@+id/main_page_count"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right|center_vertical"
                        android:text=""
                        android:textColor="@color/editor_hint_color"
                        android:textSize="@dimen/eight"/>
                </LinearLayout>
                <LinearLayout 
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="15dip"
                    android:background="@drawable/single_splite">
                    <TextView 
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/froward_comment_count"
                        android:textColor="@color/font_color"
                        android:textSize="@dimen/eight"/>
                    <TextView 
                        android:id="@+id/forward_comment_count"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right|center_vertical"
                        android:text=""
                        android:textColor="@color/editor_hint_color"
                        android:textSize="@dimen/eight"/>
                </LinearLayout>
                <LinearLayout 
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="15dip"
                    android:background="@drawable/single_splite">
                    <TextView 
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hu_coung"
                        android:textColor="@color/font_color"
                        android:textSize="@dimen/eight"/>
                    <TextView 
                        android:id="@+id/hu_count"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right|center_vertical"
                        android:text=""
                        android:textColor="@color/editor_hint_color"
                        android:textSize="@dimen/eight"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
